<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Classy Jobs HK</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_list_item_fragmnent">ListItemFragmnent</string>
    <string name="action_settings">Settings</string>
    <string name="item_image">Item Image</string>


    <string name="ok">OK</string>
    <string name="item_load_failure_title">Failed to load data.</string>
    <string name="item_load_failure">Failed to load data. Please try again later.</string>
    <string name="item_title">Item Title</string>
    <string name="item_description">Item Description</string>
    <string name="item_details_title">Large Text</string>
    <string name="item_details_description">New Text</string>
    <string name="default_cat_name">Digital Marketing</string>
    <string name="default_items_number">(1)</string>
    <string name="default_jobs_list">Jobs</string>

    <string name="page_categories_jobs"> Jobs Categories </string>
    <string name="applicationTitle">Classy Jobs HK</string>
    <string name="subSloginTitle">An Easy Way to find a job in Hong Kong!</string>
    <string name="getStartedButton">Get Started</string>
    <string name="termsOfService">Terms Of Service</string>

    <string name="refresh_page_menu">Refresh Page</string>
    <string name="item_location">Location:</string>
    <string name="item_location_info">Location Info</string>
    <string name="item_default_company">Company:</string>
    <string name="item_default_company_info">Company Not specified</string>
    <string name="item_published_text">Published:</string>
    <string name="item_published_text_default">Date</string>
    <string name="items_shown">%1$s Items Shown</string>

    <string name="search_form">Search</string>
    <string name="search_hint">Search by title,category</string>
    <string name="search_results">Search results</string>

    <string-array name="main_sliding_menu">
        <item>Categories</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="app_not_available">Sorry, the search service is not available</string>

</resources>
