<?xml version="1.0" encoding="utf-8"?>



<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:paddingBottom="10dp"
              android:paddingTop="10dp"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
        <TableRow android:layout_width="match_parent"
                  android:layout_height="match_parent">
                <LinearLayout android:layout_width="wrap_content"
                              android:paddingLeft="5dp"
                              android:paddingRight="5dp"
                              android:layout_height="match_parent">
                        <ImageView
                                android:id="@+id/itemIcon"
                                android:contentDescription="@string/item_image"
                                android:layout_width="22dp"
                                android:layout_height="22dp"
                                android:layout_marginLeft="4dp"
                                android:layout_marginStart="4dp"
                                android:layout_marginRight="10dp"
                                android:layout_marginEnd="10dp"

                                android:src="@drawable/ic_launcher" >
                        </ImageView>
                        <TextView
                                android:textColor="@color/item_job_title"
                                android:id="@+id/itemListTitle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="loong"
                                android:singleLine="false"
                                android:textSize="20sp" />
                </LinearLayout>

        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content">
                <LinearLayout android:layout_width="match_parent"

                              android:layout_height="match_parent">
                        <TextView
                                android:id="@+id/itemLocationText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/job_item_meta_margin"
                                android:text="@string/item_location"
                               />
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/item_location_info"
                                android:layout_marginLeft="@dimen/job_item_left_margin"
                                android:id="@+id/locationInfo"/>
                </LinearLayout>

        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                <LinearLayout android:layout_width="fill_parent"
                              android:layout_height="fill_parent">
                        <TextView

                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/item_default_company"
                                android:layout_marginLeft="@dimen/job_item_meta_margin"
                                android:id="@+id/textView3"/>
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/item_default_company_info"
                                android:layout_marginLeft="@dimen/job_item_left_margin"
                                android:id="@+id/companyName"/>
                </LinearLayout>

        </TableRow>

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                <LinearLayout android:layout_width="fill_parent"
                              android:layout_height="fill_parent">
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/item_published_text"
                                android:layout_marginLeft="@dimen/job_item_meta_margin"
                                android:id="@+id/textView4"/>
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/item_published_text_default"
                                android:layout_marginLeft="@dimen/job_item_left_margin"
                                android:id="@+id/itemPublishedDate"/>
                </LinearLayout>

        </TableRow>


</TableLayout>